Update font size

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       body {
         background-color: #00b5ddff;
         color: white;
+        font-size:12px;
       }
     </style>
   </head>
